fix(VTextarea): set overflow:auto when auto-grow
Since max-rows works. If auto-grow and max-rows are used together,
the scroll bar should not be hidden.

--- a/packages/vuetify/src/components/VTextarea/VTextarea.sass
+++ b/packages/vuetify/src/components/VTextarea/VTextarea.sass
@@ -22,7 +22,7 @@
 
   &--auto-grow
     .v-field__input
-      overflow: hidden
+      overflow: auto
 
   &--no-resize
     .v-field__input
